# Ambient_Email_Agent

./: .coderabbit.yaml  AGENTS.md  README.md  README_LOCAL.md  codex.yaml  pyproject.toml  system_prompt.md
.github/workflows/: ci.yml  coderabbit-auto-merge.yml
_artifacts/: s4_test_suite_logs.txt
dev_tickets/: notebook-refresh-ticket.md  pr30-review-round4-feedback.md
notebooks/: UPDATES.md  agent.ipynb  evaluation.ipynb  hitl.ipynb  memory.ipynb  test_tools.py
research/_artifacts/: pip-freeze.txt
scripts/: reminder_worker.py  run_tests_langsmith.py  s4_run_test_suite.sh
src/email_assistant/: checkpointing.py  configuration.py  cron.py  email_assistant.py  email_assistant_hitl.py  email_assistant_hitl_memory.py  email_assistant_hitl_memory_gmail.py  prompts.py  reminder_middleware.py  tracing.py  utils.py
src/email_assistant/eval/: composite.py  judges.py  reminder_judge.py  reminder_run_judge.py
src/email_assistant/graph/: reminder_nodes.py
src/email_assistant/tools/: reminders.py
src/email_assistant/tools/default/: calendar_tools.py
src/email_assistant/tools/gmail/: README.md  gmail_tools.py  parts.py  query.py  run_ingest.py  setup_gmail.py
tests/: conftest.py  run_all_tests.py  test_calendar_parser.py  test_gmail_semantics.py  test_live_reminders.py  test_notebooks.py  test_reminders.py  test_reminders_langsmith.py  test_response.py
